cmake_minimum_required(VERSION 3.11.0 FATAL_ERROR)

file(READ ${CMAKE_SOURCE_DIR}/VERSION NXS_PROJECT_VERSION)
string(STRIP ${NXS_PROJECT_VERSION} NXS_PROJECT_VERSION)

project(nxlua VERSION ${NXS_PROJECT_VERSION} LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(CMAKE_C_VISIBILITY_PRESET hidden)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_VISIBILITY_INLINES_HIDDEN ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(BUILD_SHARED_LIBS OFF)

message(STATUS "build for ${CMAKE_SYSTEM_NAME}")

execute_process (
    COMMAND git rev-parse HEAD
    OUTPUT_VARIABLE NXS_GIT_HASH
)
string(STRIP "${NXS_GIT_HASH}" NXS_GIT_HASH)

if("${NXS_GIT_HASH}" STREQUAL "")
	set(NXS_GIT_HASH "unknown")
endif()


add_compile_definitions(NXS_PROJECT_NAME=${CMAKE_PROJECT_NAME})

add_compile_definitions(NXS_PROJECT_VERSION=${NXS_PROJECT_VERSION})
add_compile_definitions(NXS_PROJECT_VERSION_MAJOR=${CMAKE_PROJECT_VERSION_MAJOR})
add_compile_definitions(NXS_PROJECT_VERSION_MINOR=${CMAKE_PROJECT_VERSION_MINOR})
add_compile_definitions(NXS_PROJECT_VERSION_PATCH=${CMAKE_PROJECT_VERSION_PATCH})

add_compile_definitions(NXS_GIT_HASH=${NXS_GIT_HASH})


add_subdirectory(src)